chart/templates/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    hoop.dev/note: 'resource deprecated and unused due to the introduction of envoy proxy'
  name: presidio-analyzer
spec:
  selector:
    app: presidio-analyzer
  ports:
    - port: 3000
      name: api
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    hoop.dev/note: 'resource deprecated and unused due to the introduction of envoy proxy'
  name: presidio-anonymizer
spec:
  selector:
    app: presidio-anonymizer
  ports:
    - port: 3000
      name: api
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: presidio-analyzer-envoy
spec:
  clusterIP: None # headless service
  selector:
    app: presidio-analyzer
  ports:
    - port: 3000
      name: api
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: presidio-anonymizer-envoy
spec:
  clusterIP: None # headless service
  selector:
    app: presidio-anonymizer
  ports:
    - port: 3000
      name: api
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: presidio-envoy-lb
  labels:
    app: presidio-envoy-proxy
spec:
  selector:
    app: presidio-envoy-proxy
  ports:
    - name: http
      port: 3010
      targetPort: 3010
      protocol: TCP
    - name: admin
      port: 9901
      targetPort: 9901
      protocol: TCP
